--- a/public/css/blog-item.styl
+++ b/public/css/blog-item.styl
@@ -29,7 +29,9 @@
 .blog-body
   margin-top: 20px
 .blog-content
-  padding-right: 20px
+  margin-right: 20px
+  padding-bottom: 20px
+  border-bottom: solid 1px #ddd
 .blog-item__layout-outline
   border-left: 1px solid #ddd
   margin-top: 40px
@@ -45,4 +47,13 @@
   .link-level-2
     padding-left: 10px
     font-size: 13px
+
+.blog-comment
+  position: relative
+  min-height: 20px
+  padding-right: 20px
+  margin-top: 20px
+
+.blog-comment-container
+  margin-top: 30px
 
