--- a/public/css/blog-list.styl
+++ b/public/css/blog-list.styl
@@ -3,7 +3,6 @@
   display: flex
 
 .list__blog-main
-  width 75%
   padding-right: 50px;
   padding-top: 20px;
 
@@ -57,3 +56,6 @@
   word-break: normal
   font-size: 15px
   line-height: 1.77
+
+.blog-label__title
+  margin-left: 6px
