--- a/public/template/common/blog-item.pug
+++ b/public/template/common/blog-item.pug
@@ -1,5 +1,5 @@
-mixin BlogItem(title, body, labels, pre, next, created_at, user)
-  div.blog-content
+mixin BlogItem(title, body, labels, pre, next, created_at, user, id)
+  div(class='blog-content' data-id=`${id}`)
     div.blog-title=title
     div.blog-meta
       i(class='cottom-iconfont cottom-icon-calendar2')=created_at
@@ -8,3 +8,6 @@ mixin BlogItem(title, body, labels, pre, next, created_at, user)
               a(href=`/label/${label.name}` class='blog-item__label-item cottom-iconfont cottom-icon-label_fill')=label.name
     div.blog-body.markdown-body!=body
     div.pre_next
+  div.blog-comment-container
+    h3 Comments
+    div.blog-comment
