--- a/public/template/common/footer.pug
+++ b/public/template/common/footer.pug
@@ -3,3 +3,4 @@ mixin footer(url)
     p
       a(href=`${url}`) ©cottom
       a(href=`https://github.com/jerry-i` class='blog-footer__source') source
+  include back-to-top.pug
