--- a/public/css/blog-item.styl
+++ b/public/css/blog-item.styl
@@ -40,6 +40,9 @@
     list-style: none
     margin: 0
     padding: 0
+  li
+    margin-bottom: 8px
+    font-size: 12px
   li.active
     color: #333
     &:hover
